cabal-version:      2.2

name:               clash-prelude-hedgehog
version:            1.9.0
synopsis:           Hedgehog Generators for clash-prelude
description:        Hedgehog Generators for clash-prelude
bug-reports:        https://github.com/clash-lang/clash-compiler/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
copyright:          Copyright © 2021-2026, QBayLogic B.V.
category:           Hardware
build-type:         Simple

Extra-source-files: CHANGELOG.md

common basic-config
  default-language: Haskell2010

  default-extensions:
    BinaryLiterals
    DataKinds
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    NoStarIsType

  ghc-options:
    -Wall -Wcompat

  build-depends:
    base      >= 4.11  && < 5,
    hedgehog  >= 1.0.3 && < 1.6,

library
  import: basic-config
  hs-source-dirs: src

  exposed-modules:
    Clash.Hedgehog.Annotations.SynthesisAttributes
    Clash.Hedgehog.Promoted.Nat
    Clash.Hedgehog.Signal
    Clash.Hedgehog.Sized.BitVector
    Clash.Hedgehog.Sized.Index
    Clash.Hedgehog.Sized.RTree
    Clash.Hedgehog.Sized.Signed
    Clash.Hedgehog.Sized.Unsigned
    Clash.Hedgehog.Sized.Vector

  build-depends:
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    text                      >= 1.2.2   && < 2.2,
    string-interpolate        ^>= 0.3,

    clash-prelude             == 1.9.0,
